Fix publications and talks title overlap problem.
Publications and Talks header was not resizing properly on mobile.  Fixed by solving that problem (use row/col/card solution from main title fix) and applying the solution to all other sections.  Resolves #2

--- a/css/master.css
+++ b/css/master.css
@@ -19,6 +19,13 @@ body, html {
   padding-top: 10px;
 }
 
+.section-card {
+  letter-spacing: 10px;
+  font-size: 25px;
+  padding-top: 10px;
+  background-color: transparent;
+}
+
 .section-header {
   text-align: center;
 }
